--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.1.5+1
   http: ^1.5.0
   uuid: ^4.5.1
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
